[gd_scene load_steps=8 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]
[ext_resource path="res://images/separator.png" type="Texture" id=3]
[ext_resource path="res://images/ball.png" type="Texture" id=4]
[ext_resource path="res://images/paddle.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.78568
height = 23.6064

[sub_resource type="CircleShape2D" id=3]
radius = 5.11969

[node name="MainScene" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 640.0
margin_bottom = 400.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="FieldRect" type="PanelContainer" parent="MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 10.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 390.0
mouse_filter = 2

[node name="Field" type="Node2D" parent="."]

[node name="LeftPaddle" type="Area2D" parent="Field"]
position = Vector2( 32.49, 188.622 )

[node name="Sprite" type="Sprite" parent="Field/LeftPaddle"]
texture = ExtResource( 5 )

[node name="Shape" type="CollisionShape2D" parent="Field/LeftPaddle"]
shape = SubResource( 2 )

[node name="Separator" type="Sprite" parent="Field"]
position = Vector2( 320, 200 )
texture = ExtResource( 3 )

[node name="RightPaddle" type="Area2D" parent="Field"]
self_modulate = Color( 1, 0, 1, 1 )
position = Vector2( 608.88, 188.622 )

[node name="Sprite" type="Sprite" parent="Field/RightPaddle"]
texture = ExtResource( 5 )

[node name="Shape" type="CollisionShape2D" parent="Field/RightPaddle"]
shape = SubResource( 2 )

[node name="Ball" type="Area2D" parent="Field"]
position = Vector2( 320.387, 189.525 )

[node name="Sprite" type="Sprite" parent="Field/Ball"]
texture = ExtResource( 4 )

[node name="Shape" type="CollisionShape2D" parent="Field/Ball"]
shape = SubResource( 3 )

[node name="UI" type="MarginContainer" parent="."]
margin_right = 640.0
margin_bottom = 400.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_left = 5.0
margin_top = 5.0
margin_right = 635.0
margin_bottom = 380.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
margin_right = 630.0
margin_bottom = 14.0

[node name="LeftScoreLabel" type="Label" parent="UI/VBoxContainer/HBoxContainer"]
margin_right = 313.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightScoreLabel" type="Label" parent="UI/VBoxContainer/HBoxContainer"]
margin_left = 317.0
margin_right = 630.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "0"
align = 1

[node name="ConnectButton" type="Button" parent="UI"]
margin_left = 220.0
margin_top = 142.0
margin_right = 420.0
margin_bottom = 242.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Connect"

[node name="DisconnectButton" type="Button" parent="UI"]
margin_left = 220.0
margin_top = 330.0
margin_right = 420.0
margin_bottom = 380.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Disconnect"

[node name="StatusLabel" type="Label" parent="UI"]
margin_left = 5.0
margin_top = 366.0
margin_right = 635.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisconnectButton2" type="Button" parent="UI"]
margin_left = 5.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Disconnect"

[node name="DebugLabel" type="Label" parent="."]
margin_right = 100.0
margin_bottom = 400.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3
autowrap = true
clip_text = true
